<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cWhite">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/textBackColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/d_bottom_nav_star"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/r_r"
            android:textSize="12sp"
            android:paddingTop="3dp"
            android:text="@string/recomendations"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/d_bottom_nav_settings"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/r_r"
            android:textSize="12sp"
            android:paddingTop="3dp"
            android:text="@string/settings"
            android:textAlignment="center" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/ivSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/d_bottom_nav_send"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/r_r"
            android:textSize="12sp"
            android:paddingTop="3dp"
            android:text="@string/send"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/ivReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/d_bottom_nav_download"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tvReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/r_r"
            android:textSize="12sp"
            android:paddingTop="3dp"
            android:text="@string/receive"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>