<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.wi_fi_direct.pages.SettingsActivity">

    <include
        android:id="@+id/layoutTopNav"
        layout="@layout/top_nav"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clBanner"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:background="@color/cBannerBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTopNav">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/d_banner_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/banner_title"
            android:fontFamily="@font/r_m"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/banner_text"
            android:fontFamily="@font/r_r"
            android:textColor="@color/cTextGrey"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/textView"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/d_banner_btn_go" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutBottomNav"
        app:layout_constraintTop_toBottomOf="@id/clBanner">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clBanner">

            <!--<android.support.constraint.ConstraintLayout-->
                <!--android:id="@+id/clHistory"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="54dp"-->
                <!--android:background="attr/selectableItemBackground"-->
                <!--app:layout_constraintTop_toTopOf="parent"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent" >-->

                <!--<View-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@color/cDivider"-->
                    <!--app:layout_constraintTop_toTopOf="parent"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent" />-->

                <!--<ImageView-->
                    <!--android:id="@+id/imageView4"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="15dp"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintTop_toTopOf="parent"-->
                    <!--app:srcCompat="@drawable/d_icon_history" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textView4"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="14dp"-->
                    <!--android:fontFamily="@font/r_r"-->
                    <!--android:text="@string/history"-->
                    <!--android:textSize="14sp"-->
                    <!--android:textColor="@color/cTextGrey"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintStart_toEndOf="@+id/imageView4"-->
                    <!--app:layout_constraintTop_toTopOf="parent" />-->

                <!--<View-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@color/cDivider"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent" />-->

            <!--</android.support.constraint.ConstraintLayout>-->

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clStoreLocation"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/d_icon_file" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/r_r"
                    android:text="@string/store_location"
                    android:textSize="14sp"
                    android:textColor="@color/cTextGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/cDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clRate"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/clStoreLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/d_icon_star" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/r_r"
                    android:text="@string/rate_app"
                    android:textSize="14sp"
                    android:textColor="@color/cTextGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/cDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clSettingsOfWifiDirect"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/clRate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/d_icon_wifi" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/r_r"
                    android:text="@string/settings_of_wifi_direct"
                    android:textSize="14sp"
                    android:textColor="@color/cTextGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/cDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clAbout"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/clSettingsOfWifiDirect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/d_icon_info" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/r_r"
                    android:text="@string/about_app"
                    android:textSize="14sp"
                    android:textColor="@color/cTextGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/cDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <!--<android.support.constraint.ConstraintLayout-->
                <!--android:id="@+id/clCleanCache"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="54dp"-->
                <!--android:background="attr/selectableItemBackground"-->
                <!--app:layout_constraintTop_toBottomOf="@id/clAbout"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent" >-->

                <!--<ImageView-->
                    <!--android:id="@+id/imageView9"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="15dp"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintTop_toTopOf="parent"-->
                    <!--app:srcCompat="@drawable/d_icon_delete" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textView9"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="14dp"-->
                    <!--android:fontFamily="@font/r_r"-->
                    <!--android:text="@string/clean_cache"-->
                    <!--android:textSize="14sp"-->
                    <!--android:textColor="@color/cTextGrey"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintStart_toEndOf="@+id/imageView9"-->
                    <!--app:layout_constraintTop_toTopOf="parent" />-->

                <!--<View-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@color/cDivider"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent" />-->

            <!--</android.support.constraint.ConstraintLayout>-->

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clMailTo"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/clAbout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/d_icon_question" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/r_r"
                    android:text="@string/mail_to_developers"
                    android:textSize="14sp"
                    android:textColor="@color/cTextGrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/cDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <include
        android:id="@+id/layoutBottomNav"
        layout="@layout/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>
